--- a/app/comp/section6/section6.module.css
+++ b/app/comp/section6/section6.module.css
@@ -5,7 +5,6 @@
   position: relative;
 }
 
-
 .title {
   width: 395px;
   height: 116px;
@@ -23,8 +22,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 5;
 }
-
 
 .block_row {
   width: 100%;
@@ -38,6 +37,29 @@
   grid-template-columns: 1fr 1fr;
   gap: 40px;
   align-items: start;
+}
+
+.blockRowButton {
+  margin-top: 2vh;
+  grid-column: 1 / -1;
+  width: 80%;
+  height: 55px;
+  background-color: #000;
+  color: #fff;
+  border: none;
+  border-radius: 9999px;
+  font-family: Forum, serif;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 4%;
+  text-align: center;
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  justify-self: center;
 }
 
 .leftBlock {
@@ -76,7 +98,9 @@
   width: 321px;
   height: 103px;
   color: rgba(0, 0, 0, 1);
-  font-family: Manrope, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Helvetica Neue, Arial, "Apple Color Emoji", "Segoe UI Emoji";
+  font-family: Manrope, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu,
+    Cantarell, Noto Sans, Helvetica Neue, Arial, "Apple Color Emoji",
+    "Segoe UI Emoji";
   font-size: 16px;
   font-weight: 400;
   line-height: 179.8%;
@@ -85,12 +109,11 @@
   margin: 0;
 }
 
-
- .diamond {
+.diamond {
   width: 105px;
   height: 200px;
- 
-font-size: 60px;
+
+  font-size: 60px;
   display: flex;
   align-items: center;
   gap: 105px;
@@ -121,74 +144,192 @@ font-size: 60px;
   height: 68px;
   background: rgba(255, 255, 255, 0.31);
   transform: translateY(-40px);
-  z-index: 0; 
+  z-index: 0;
 }
 
+.decorTopRight {
+  position: absolute;
+  top: -25vh;
+  right: -50vh;
+  width: 1083.11px;
+  height: 778.96px;
+  transform: rotate(16.5deg);
+  opacity: 0.75;
+  pointer-events: none;
+}
 
+.decorRight_2 {
+  position: absolute;
+  top: 300px;
+  right: -40vh;
+  width: 720px;
+  height: 518px;
+  transform: rotate(-164deg);
+  opacity: 0.9;
+  pointer-events: none;
+}
+
+.decorLeft_3 {
+  position: absolute;
+  top: 400px;
+  left: -40vh;
+  width: 720px;
+  height: 518px;
+  transform: rotate(177.27deg);
+  opacity: 0.83;
+  pointer-events: none;
+}
+
+@media (max-width: 992px) {
+  .decorTopRight {
+    position: absolute;
+    top: -5vh;
+    right: -40vh;
+    width: 900px;
+    height: 500px;
+  }
+
+  .decorRight_2 {
+    position: absolute;
+    top: 250px;
+    right: -35vh;
+    width: 620px;
+    height: 418px;
+  }
+  .decorLeft_3 {
+    top: 500px;
+    left: -40vh;
+    width: 620px;
+    height: 418px;
+  }
+}
+
+@media (min-width: 620px) and (max-width: 768px) {
+  .decorTopRight {
+    position: absolute;
+    top: 15vh;
+    right: -40vh;
+    width: 900px;
+    height: 500px;
+  }
+
+  .decorRight_2 {
+    position: absolute;
+    top: 400px;
+    right: -35vh;
+    width: 620px;
+    height: 418px;
+  }
+  .decorLeft_3 {
+    top: 500px;
+    left: -40vh;
+    width: 620px;
+    height: 418px;
+  }
+}
 
 @media (max-width: 620px) {
   .title {
- 
-  
     font-size: 50px;
-  
-   
-   
   }
   .infoTitle {
-   
     font-size: 34px;
-    
   }
   .diamond {
     width: 95px;
     height: 190px;
-   
-  font-size: 50px;
-    
+
+    font-size: 50px;
+
     gap: 105px;
-   
+  }
+  .decorTopRight {
+    position: absolute;
+    top: 10vh;
+    right: -30vh;
+    width: 700px;
+    height: 400px;
+  }
+
+  .decorRight_2 {
+    position: absolute;
+    top: 370px;
+    right: -30vh;
+    width: 520px;
+    height: 318px;
+  }
+  .decorLeft_3 {
+    top: 550px;
+    left: -40vh;
+    width: 520px;
+    height: 318px;
   }
 }
 
-
 @media (max-width: 480px) {
+  .block_row {
+    gap: 0px;
+  }
 
   .title {
-   
-  
     font-size: 40px;
-  
-   
-   
   }
   .rightBlock {
-   
     gap: 65px;
   }
-  
+
   .leftBlock {
-   margin-top: 5vh;
+    margin-top: 5vh;
   }
   .infoTitle {
     width: 200px;
     font-size: 32px;
-    
   }
   .infoText {
     width: 45vw;
     height: auto;
-    
+
     font-size: 14px;
-    
   }
   .diamond {
     width: 70px;
     height: 165px;
-   
-  font-size: 46px;
-    
+
+    font-size: 40px;
+
     gap: 105px;
+  }
+  .decorTopRight {
+    position: absolute;
+    top: 5vh;
+    right: -50vh;
+    width: 800px;
+    height: 500px;
+  }
+
+  .decorRight_2 {
+    position: absolute;
+    top: 400px;
+    right: -50vh;
+    width: 620px;
+    height: 418px;
+  }
+  .decorLeft_3 {
+    top: 550px;
+    left: -50vh;
+    width: 620px;
+    height: 418px;
+  }
+  .blockRowButton {
+    margin-top: 3vh;
+  
+    width: 80%;
+    height: 45px;
+    
+    font-size: 20px;
    
+    line-height: 26px;
+    
+    
   }
 }
