--- a/app/page.module.css
+++ b/app/page.module.css
@@ -23,3 +23,15 @@
     min-height: 100svh;
   }
 } */
+
+/* .bottomBand {
+  width: 100%;
+  height: 500px;
+  background-color: #e0d2ca;
+}
+
+.carouselMount {
+  position: relative;
+  width: 100%;
+  min-height: 900px;
+} */
