--- a/app/comp/section6/section6.module.css
+++ b/app/comp/section6/section6.module.css
@@ -1,6 +1,6 @@
 .section6 {
   width: 100%;
-  height: 200svh;
+  height: 200vh;
   background-color: #e0d2ca;
   position: relative;
   /* margin-top: -1px; overlap previous section by 1px to hide seam */
