--- a/app/comp/section5/section5.module.css
+++ b/app/comp/section5/section5.module.css
@@ -315,7 +315,7 @@
 
 @media (max-width: 480px) {
   .section5 {
-    height: 75svh; 
+    height: 75vh; 
     /* padding: 60px 12px 100px; */
   }
   .imageBox {
