--- a/app/comp/section4/section4.module.css
+++ b/app/comp/section4/section4.module.css
@@ -444,10 +444,10 @@
 }
 
 @media (max-width: 480px) {
-  .section4 {
+  /* .section4 {
    
     height: 140vh;
-  }
+  } */
   .bgMont {
    
    margin-top: 250px;
