--- a/app/comp/main/main.module.css
+++ b/app/comp/main/main.module.css
@@ -1,20 +1,19 @@
 .page {
   position: relative;
   width: 100%;
- 
+
   height: auto;
-  /* overflow-x: hidden; */
+  background-color: #e0d2ca;
 }
 
 .backgroundImage_1 {
   position: relative;
   top: 0;
-  width: 100%;
-  /* height: 100vw; */
-  height: 1000px;
+  width: 110%;
+
+  height: 82.44vh;
 
   z-index: 1;
-  /* overflow: hidden; */
 }
 
 .backgroundImage_2 {
@@ -22,16 +21,15 @@
   top: 32svh;
   left: 0;
   width: 100%;
-  height: 1100px;
+  height: 72.39vh;
   z-index: 2;
 }
-
 .backgroundImage_3 {
   position: absolute;
-  top: 54svh;
+  top: 44svh;
   left: 0;
   width: 100%;
-  height: 900px;
+  height: 60.5vh;
   z-index: 3;
 }
 
@@ -71,14 +69,14 @@
 }
 .title_text_1 {
   position: absolute;
-  top: 40%;
-  left: 50%;
+  top: 42%;
+  left: 51%;
   transform: translate(-50%, -50%);
   width: 936px;
   height: 258px;
   color: rgba(252, 252, 252, 1);
   font-family: Forum;
-  font-size: 197.95px;
+  font-size: 196px;
   font-weight: 400;
   line-height: 63.82%;
   letter-spacing: 4%;
@@ -89,7 +87,7 @@
 
 .title_text_2 {
   position: absolute;
-  top: 57%;
+  top: 65%;
   left: 50%;
   transform: translate(-50%, -50%);
   /* Places */
@@ -109,7 +107,7 @@
 .vector {
   /* Vector */
   position: absolute;
-  top: 64svh;
+  top: 57vh;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 120px;
@@ -135,52 +133,49 @@
 }
 
 .find_block {
-position: relative;
-bottom: 0;
-left: 50%;
-transform: translateX(-50%);
-width: 100%;
-display: flex;
-justify-content: center;
-z-index: 20;
---r30w: 17%;
+  position: relative;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  z-index: 20;
+  --r30w: 17%;
 }
 .rectangle_10 {
   position: absolute;
- top: -60px;
-width: calc(var(--r30w) * 0.2);
-height: auto;
-aspect-ratio: 58.63 / 20.02;
+  top: -60px;
+  width: calc(var(--r30w) * 0.2);
+  height: auto;
+  aspect-ratio: 58.63 / 20.02;
 }
-.rectangle_20{
- position: absolute;
- top: -40px;
-width: calc(var(--r30w) * 0.8);
-height: auto;
-aspect-ratio: 280 / 61;
-
-
+.rectangle_20 {
+  position: absolute;
+  top: -40px;
+  width: calc(var(--r30w) * 0.8);
+  height: auto;
+  aspect-ratio: 280 / 61;
 }
 .rectangle_30 {
   position: absolute;
- top: -30px;
+  top: -30px;
   left: 50%;
   transform: translateX(-50%);
   width: var(--r30w);
-height: 55px;
+  height: 55px;
   border-radius: 67px;
-   z-index: 5; 
-background: rgba(255, 255, 255, 1);
+  z-index: 5;
+  background: rgba(255, 255, 255, 1);
   display: flex;
   align-items: center;
   justify-content: center;
-  
 }
 .rectangle_30_text {
   position: absolute;
   top: -8%;
-   left: 50%;
-   transform: translateX(-50%);
+  left: 50%;
+  transform: translateX(-50%);
   font-family: Forum;
   font-size: clamp(14px, 1.8vw, 26px);
   font-weight: 400;
@@ -192,13 +187,13 @@ background: rgba(255, 255, 255, 1);
   z-index: 6;
 }
 .rectangle {
-/* position: relative; */
-width: 75%;
-min-height:115px;
-height:auto;
-border-radius: 10px;
-background: rgba(255, 255, 255, 1);
-z-index: 5;
+  /* position: relative; */
+  width: 75%;
+  min-height: 115px;
+  height: auto;
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 1);
+  z-index: 5;
 
   display: grid;
   grid-template-columns: 1.1fr 1.1fr 1.1fr 1.1fr auto;
@@ -207,24 +202,20 @@ z-index: 5;
   padding: 18px 22px;
 }
 
-
 .rectCol {
   display: flex;
   flex-direction: column;
   gap: 6px;
- 
 }
 
 .rectHeader {
   display: flex;
   align-items: center;
   gap: 10px;
- 
 }
 
 .rectTitle {
   color: rgba(121, 101, 94, 1);
-
 
   font-size: 18px;
   font-weight: 200;
@@ -232,25 +223,24 @@ z-index: 5;
   letter-spacing: 0%;
   text-align: left;
   font-family: Forum;
- 
 }
 
 .rectSub {
-  color:  rgba(12, 11, 16, 1);
- 
+  color: rgba(12, 11, 16, 1);
+
   font-family: Forum;
-font-size: 18px;
-font-weight: 600;
-line-height: 100%;
-letter-spacing: 0%;
-text-align: left;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-align: left;
 }
 
 .findButton {
   justify-self: end;
   height: 56px;
-  background: #0C0B10;
-  color: #FFFFFF;
+  background: #0c0b10;
+  color: #ffffff;
   border: none;
   border-radius: 999px;
   padding: 0 28px;
@@ -268,25 +258,144 @@ text-align: left;
 
 
 
-/* Медиа-запросы для адаптивности */
-@media (max-width: 1200px) {
+
+
+@media (min-width: 1700px) and (max-width: 2300px) {
+  .page {
+   
+  
+    height: 140vh;
+   
+  }
   .backgroundImage_1 {
-    /* height: 90vh; */
-    min-height: 500px;
+    position: relative;
+    top: 0;
+    width: 110%;
+
+    height: 82.44vh;
+
+    z-index: 1;
   }
 
   .backgroundImage_2 {
-    top: 45svh;
-    height: 90svh;
-    min-height: 500px;
+    position: absolute;
+    top: 38vh;
+    left: 0;
+    width: 100%;
+    height: 92.39vh;
+    z-index: 2;
   }
-
   .backgroundImage_3 {
-    top: 55svh;
-    height: 90svh;
-    min-height: 500px;
+    position: absolute;
+    top: 62vh;
+    left: 0;
+    width: 100%;
+    height: 96.5vh;
+    z-index: 3;
+  }
+  .title_1 {
+    /* the world’s most */
+
+    top: 18%;
+
+    width: 148px;
+    height: 75px;
+
+    font-size: 26px;
+  }
+  .title_text_1 {
+    top: 40%;
   }
 
+  .title_text_2 {
+    top: 58%;
+  }
+  .vector {
+    top: 72vh;
+    left: 50%;
+  }
+  .find_block {
+    position: relative;
+    bottom: -45vh;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    z-index: 20;
+    --r30w: 17%;
+  }
+}
+
+
+@media (min-width: 1440px) and (max-width: 1700px) {
+  .page {
+   
+  
+    height: 110vh;
+   
+  }
+  .backgroundImage_1 {
+    position: relative;
+    top: 0;
+    width: 110%;
+
+    height: 82.44vh;
+
+    z-index: 1;
+  }
+
+  .backgroundImage_2 {
+    position: absolute;
+    top: 38vh;
+    left: 0;
+    width: 100%;
+    height: 72.39vh;
+    z-index: 2;
+  }
+  .backgroundImage_3 {
+    position: absolute;
+    top: 52vh;
+    left: 0;
+    width: 100%;
+    height: 70.5vh;
+    z-index: 3;
+  }
+  .title_1 {
+    /* the world’s most */
+
+    top: 18%;
+
+    width: 148px;
+    height: 75px;
+
+    font-size: 26px;
+  }
+  .title_text_1 {
+    top: 40%;
+  }
+
+  .title_text_2 {
+    top: 63%;
+  }
+  .vector {
+    top: 63vh;
+    left: 50%;
+  }
+  .find_block {
+    position: relative;
+    bottom: -15vh;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    z-index: 20;
+    --r30w: 17%;
+  }
+}
+
+@media (max-width: 1200px) {
   .gradient {
     height: 250px;
   }
@@ -316,7 +425,7 @@ text-align: left;
 }
 @media (max-width: 1000px) {
   .title_text_1 {
-    top: 47%;
+    top: 44%;
     font-size: 147.95px;
   }
   .title_text_2 {
@@ -393,7 +502,7 @@ text-align: left;
     width: 100%;
     max-width: 100%;
     height: auto;
-    top: 45%;
+    top: 42%;
     font-size: clamp(42px, 19vw, 108px);
   }
   .title_text_2 {
@@ -415,13 +524,13 @@ text-align: left;
     background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 80 160'><polygon points='40,0.5 79.5,80 40,159.5 0.5,80' fill='none' stroke='white' stroke-opacity='0.5' stroke-width='1' shape-rendering='crispEdges'/></svg>");
   }
   .find_block {
-  bottom: -170px;
+    bottom: -5vh;
     --r30w: 36%;
   }
   .rectangle {
     width: 90%;
     min-height: 110px;
-    height: auto;
+    height: 22vh;
     border-radius: 12px;
     grid-template-columns: 1fr 1fr;
     column-gap: 16px;
@@ -429,15 +538,23 @@ text-align: left;
     padding: 14px 16px;
     justify-items: center;
   }
-  .rectCol { align-items: center; }
-  .rectTitle { font-size: 16px; }
-  .rectSub { font-size: 16px; }
+  .rectCol {
+    align-items: center;
+  }
+  .rectTitle {
+    font-size: 16px;
+  }
+  .rectSub {
+    font-size: 16px;
+  }
   .findButton {
-   
     grid-column: 1 / -1;
     width: 80%;
     justify-self: center;
     height: 48px;
+    max-width: 40%;
+    justify-content: center;
+    align-items: center;
   }
   .rectangle_30 {
     width: var(--r30w);
@@ -457,21 +574,25 @@ text-align: left;
 }
 
 @media (max-width: 480px) {
+  .page {
+    height: 100vh;
+    /* overflow-x: hidden; */
+  }
   .backgroundImage_1 {
-    height: 45svh;
-    min-height: 300px;
+    height: 70vh;
+    min-height: 400px;
   }
 
   .backgroundImage_2 {
-    top: 20svh;
-    height: 40svh;
-    min-height: 300px;
+    top: 28vh;
+    height: 35vh;
+    min-height: 400px;
   }
 
   .backgroundImage_3 {
-    top: 32svh;
-    height: 50svh;
-    min-height: 300px;
+    top: 37vh;
+    height: 35vh;
+    min-height: 400px;
   }
 
   .gradient {
@@ -480,52 +601,92 @@ text-align: left;
   .title_1 {
     /* the world’s most */
 
-    top: 22%;
+    top: 15%;
     width: 130px;
     height: 75px;
     line-height: 22px;
     letter-spacing: 5px;
 
-    font-size: 14px;
+    font-size: 16px;
   }
   .title_text_1 {
-    top: 47%;
+    top: 33%;
   }
   .title_text_2 {
-    top: 69%;
+    top: 45%;
   }
   .vector {
     /* Vector */
-    top: 44svh;
+    top: 42svh;
     width: 60px;
     height: 120px;
   }
 
- 
   .vector::after {
     background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 80 160'><polygon points='40,0.5 79.5,80 40,159.5 0.5,80' fill='none' stroke='white' stroke-opacity='0.5' stroke-width='1' shape-rendering='crispEdges'/></svg>");
   }
   .find_block {
+    bottom: 9vh;
     --r30w: 48%;
   }
   .rectangle {
     width: 92%;
     min-height: 100px;
-    height: auto;
+    height: 35vh;
     border-radius: 12px;
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto auto;
     gap: 10px;
-    padding: 12px 14px;
+    padding: 36px 14px;
     justify-items: center;
   }
-  .rectCol { align-items: center; }
-  .rectTitle { font-size: 15px; }
-  .rectSub { font-size: 15px;}
+  .rectCol {
+    align-items: center;
+  }
+
+  /* Позиционирование rectCol элементов */
+  .rectCol:nth-child(1) {
+    grid-column: 1 / -1;
+    grid-row: 1;
+    justify-self: center;
+  }
+
+  .rectCol:nth-child(2) {
+    grid-column: 1 / -1;
+    grid-row: 2;
+    justify-self: center;
+  }
+
+  .rectCol:nth-child(3) {
+    grid-column: 1;
+    grid-row: 3;
+    justify-self: center;
+  }
+
+  .rectCol:nth-child(4) {
+    grid-column: 2;
+    grid-row: 3;
+    justify-self: center;
+  }
+
+  .rectTitle {
+    font-size: 20px;
+  }
+  .rectSub {
+    font-size: 20px;
+  }
   .rectangle_30 {
-    width: var(--r30w);
+    width: calc(var(--r30w) * 1.3);
     height: 46px;
     top: -24px;
-    
+  }
+  .rectangle_30_text {
+    top: -3%;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 26px;
+
+    letter-spacing: 4%;
   }
   .rectangle_20 {
     width: calc(var(--r30w) * 0.8);
@@ -539,11 +700,15 @@ text-align: left;
   }
   .findButton {
     margin-top: 10px;
-    grid-column: 1 / -1;
+    /* grid-column: 1 / -1; */
     width: 50%;
     height: 46px;
     justify-self: center;
+    justify-content: center;
+    align-items: center;
   }
-  .findIcon { width: 18px; height: 18px; }
+  .findIcon {
+    width: 18px;
+    height: 18px;
+  }
 }
-
