--- a/app/comp/section1/section1.module.css
+++ b/app/comp/section1/section1.module.css
@@ -125,7 +125,7 @@ text-align: center;
   }
 }
 
-@media (max-width: 768px){
+@media (min-width: 480px) and (max-width: 768px){
   .header {
     top: 27vh;
   }
@@ -149,55 +149,66 @@ text-align: center;
 }
 
 @media (max-width: 480px){
+  .container {
+   
+    height: 76svh;
+   
+}
   .header {
-    top: 25vh;
+    top: 4%;
   }
   
   .rhombus {
     width: 70px;
     height: 132px;
-    top: 30vh;
+    top: 12%;
   }
   
   .carouselWrap {
-    top: 58vh;
-    width: 98vw;
+    top: 32svh;
+    width: 92vw;
+   
   }
   
   .continents {
-    margin-top: 70px;
+    margin-top: 28%;
     gap: 2.5vw;
-    font-size: clamp(8px, 2vw, 14px);
+    font-size: 8px;
   }
   
   .title {
   margin-top: 20%;
-    font-size: clamp(28px, 8vw, 36px);
+    font-size: 28px;
   }
   
   .title div:last-child {
-    font-size: clamp(28px, 8vw, 36px);
+    font-size: 28px;
   }
 }
 
 /* Дополнительные стили для очень маленьких экранов */
 @media (max-width: 360px) {
+  .container {
+   
+    height: 73svh;
+   
+}
   .header {
-    top: 22vh;
+    top: 5%;
   }
   
   .rhombus {
     width: 60px;
     height: 113px;
-    top: 18vh;
+    top: 12%;
   }
   
   .carouselWrap {
-    top: 45vh;
+    top: 39%;
   }
   
   .continents {
-    margin-top: 30px;
+    margin-top: 30%;
     gap: 0.8vw;
   }
 }
