--- a/app/comp/main/main.module.css
+++ b/app/comp/main/main.module.css
@@ -35,10 +35,10 @@
 
 .gradient {
   position: absolute;
-  bottom: 0;
+  bottom: -1px;
   left: 0;
   width: 100%;
-  height: 351px;
+  height: 355px;
   background: linear-gradient(
     180deg,
     rgba(226, 211, 206, 0),
